syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "srvMasters.protos";

package countryState;

// The greeting service definition.
service ICountryState {
  // Sends a greeting
  rpc GetCountry (mdlGetCountry) returns (mdlCountryList);
  rpc GetState (mdlGetState) returns (mdlStateList);
  rpc SaveState (mdlState) returns (mdlCountryStateSaveResponse);
  rpc SaveCountry (mdlCountry) returns (mdlCountryStateSaveResponse);
}

message mdlCountryList{
 repeated mdlCountry country=1;
} 
message mdlStateList{
 repeated mdlState state=1;
} 

// The request message containing the user's name.
message mdlCountry {
  string countryId= 1;
  string code= 2;
  google.protobuf.StringValue name= 3;
  google.protobuf.StringValue phoneCode= 4;
  google.protobuf.StringValue capital= 5;
  bool isActive=6;
  repeated mdlCountryTopCity cities =7;
  repeated string currency=8;
  repeated string languages=9;
  repeated mdlCountryTimeZone timeZones=10;
  google.protobuf.StringValue modifiedBy=11;
  google.protobuf.Timestamp modifiedDt = 12;
}

message mdlCountryTopCity {
	string cityName=1;
	google.protobuf.StringValue stateId=2;
	int32 productCount=3;
}

message mdlCountryTimeZone{
	google.protobuf.StringValue zoneName=1;
	google.protobuf.StringValue offset=2;
	google.protobuf.StringValue offsetName=3;
	google.protobuf.StringValue abbreviation=4;
	google.protobuf.StringValue tzName=5;	
}

message mdlState {
  string stateId = 1;
  google.protobuf.StringValue code = 2;
  string name = 3;
  google.protobuf.StringValue countryId = 4;
  google.protobuf.StringValue latitude= 5;
  google.protobuf.StringValue longitude= 6;
  repeated mdlCity cities=7;
  string modifiedBy=11;
  google.protobuf.Timestamp modifiedDt = 12;
}

message  mdlCity{
	string cityName=1;
	int32 productCount=2;
	google.protobuf.StringValue latitude=3;
	google.protobuf.StringValue longitude=4; 
}

message mdlGetState
{
	google.protobuf.StringValue stateId=1;
	google.protobuf.StringValue countryId=2;
	bool onlyActive=3;
	bool allData=4;
}
message mdlGetCountry
{
	google.protobuf.StringValue countryId=1;
	google.protobuf.StringValue countryCode=2;
	google.protobuf.StringValue countryName=3;
	bool onlyActive=4;
	bool allData=5;
}

message mdlCountryStateSaveResponse
{
	bool status=1;
	string message=2;
	string messageId =3;	
}
